--- a/resources/views/partials/_layout.pug
+++ b/resources/views/partials/_layout.pug
@@ -7,5 +7,11 @@ html(lang="en")
     block head
     link(rel="stylesheet", href=mix('/assets/css/app.css'))
   body
+    //- In development, if SVG is included in pug,
+    //- injection of changes such as CSS by BrowserSync is prevented
+    //- Because svg-spritemap-webpack-plugin reacts for all changes,
+    //- and it causes pug recompile and browser reloading
+    if process.env.NODE_ENV === 'production'
+      include /../../public/assets/svg/sprite.svg
     block content
     script(src=mix('/assets/js/app.js'))
