--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -1,5 +1,5 @@
 <%
-const title = 'Laravel Mix Boilerplate for Static Site'
+const title = 'Laravel Mix Boilerplate Static'
 %>
 
 <%- include('/partials/header', { slug: 'index', title }) -%>
